[tool.poetry]
name = "twitch-sdk"
version = "0.1.0"
description = "Complete Twitch Helix API SDK with Pydantic validation for 170+ endpoints"
authors = ["ldraney"]
readme = "README.md"
packages = [{include = "twitch_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
twitch-client = {path = "../twitch-client", develop = true}
pydantic = "^2.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
